# gpufl-agent

./: .gitignore  CMakeLists.txt  Dockerfile  build.gradle  settings.gradle
.github/workflows/: ci.yml  publish-image.yml  release-jar.yml
crawler/: .gitignore  ClientLogReader.cpp  ClientLogReader.h  Config.cpp  Config.h  GpuMonitor.cpp  GpuMonitor.h  JsonUtils.cpp  JsonUtils.h  MetricsSender.cpp  MetricsSender.h  ThreadSafeQueue.h  Utils.h  app_main.cpp
crawler/schema/: README.md  crawler_metrics.schema.json
examples/config/: prod.json
gpuflight-agent/: build.gradle.kts  settings.gradle.kts
gpuflight-agent/src/main/kotlin/com/gpuflight/agent/: Cursor.kt  CursorManager.kt  LogTailer.kt  Main.kt
gpuflight-agent/src/main/resources/config/: local.json  prod.json
gradle/wrapper/: gradle-wrapper.properties
src/main/java/com/gpuflight/agent/: CursorManager.java  CursorPosition.java  CursorState.java  GpuflAgent.java  LogArchiver.java  LogTailer.java  Main.java
src/main/java/com/gpuflight/agent/config/: ConfigLoader.java  HttpConfig.java  JsonSettings.java  KafkaConfig.java  PublisherConfig.java  StreamUploadSettings.java
src/main/java/com/gpuflight/agent/filter/: DeviceMetricDeduplicator.java
src/main/java/com/gpuflight/agent/model/: AgentConfig.java  ArchiverConfig.java  DiscoveredSession.java  (+2 more)
src/main/kotlin/com/gpuflight/agent/: CursorManager.kt  LogTailer.kt  Main.kt
src/main/resources/config/: local.json
src/test/java/com/gpuflight/agent/: CursorManagerTest.java  CursorPositionTest.java  CursorStateTest.java  LogTailerTest.java  MainTest.java
(+32 files in other folders)
